test/e2e/chainsaw/common/_step_templates/apply-assert-namespace.yaml
# Template for creating and asserting a namespace.
#
# Required bindings:
#   - namespace_name: Name of the namespace to create.
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: apply-assert-namespace
spec:
  try:
    - apply:
        resource:
          # Create Namespace.
          apiVersion: v1
          kind: Namespace
          metadata:
            name: ($namespace_name)
    - assert:
        resource:
          # Assert Namespace is Active.
          apiVersion: v1
          kind: Namespace
          metadata:
            name: ($namespace_name)
          status:
            phase: Active
  # This runs only if the try block fails.
  catch:
    - script:
        env:
          - name: NAMESPACE_NAME
            value: ($namespace_name)
        content: |
          echo "Namespace $NAMESPACE_NAME failed to reach Active state."
          kubectl describe ns $NAMESPACE_NAME
